# EasyPhotoshop

./: .gitignore  CMakeLists.txt  README.md  main.c
core/: CMakeLists.txt  color-space.c  color-space.h  dither.c  dither.h  image.c  image.h  lena.c  lena.h  lossless-predictive-coding.c  lossless-predictive-coding.h  pixel.c  pixel.h  size.c  size.h
dct/: DCT.c  DCT.h  main.c
fileio/: CMakeLists.txt  bmp.c  bmp.h  fileio.c  fileio.h  input-format-table.c  input-format-table.h  output-format-table.c  output-format-table.h
gui/: CMakeLists.txt  callbacks.c  callbacks.h  dummy.c  image-widget.c  image-widget.h  main.c  main.h
imgproc/: CMakeLists.txt  DCT.c  DCT.h  color-convert.c  color-convert.h  discrete-cosine-transform.c  discrete-cosine-transform.h  dither.c  histogram-equalization.c  histogram-equalization.h  lossless-predictive-coding.c  lossless-predictive-coding.h  test.c  uniform-quantization.c  uniform-quantization.h
